fixing with the contact view to change the looks of some text to make it more readable

--- a/src/index.css
+++ b/src/index.css
@@ -339,14 +339,14 @@ margin-top: 3%;
 
 #contact {
   background-color: lightgray;
-  padding: 5rem;
+  padding-top: 10%;
+  padding-bottom: 3%;
   min-width: 100%;
   min-height: 100%;
   overflow: hidden;
 }
 #contact-info {
   text-align: center;
-  margin-top: 8rem;
 }
 
 #contact-info h1 {
@@ -364,8 +364,8 @@ margin-top: 3%;
 }
 
 #contact-greeting {
-  margin-top: 4rem;
-  font-size: 1.5rem;
+  margin-top: 4%;
+  font-size: 1.7rem;
   font-weight: 150;
   text-align: center;
   color: black;
@@ -375,6 +375,32 @@ margin-top: 3%;
 #contact-greeting img {
   height: 40rem;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+#contact-logo {
+  height: auto;
+  width: 30%;
+}
+
+#opening-hours{
+  text-align: center;
+  padding-top: 2%;
+}
+
+.opening-hours-info{
+  display: inline-block;
+  width: 15rem;
+  height: 10rem;
+  padding-left: 2%;
+  padding-right: 2%;
+}
+
+#opening-hours-info {
+display: inline-block;
+  width: 30.5rem;
+  height: 10rem;
+  padding-left: 2%;
+  padding-right: 2%;
 }
 #team {
   background-color: lightgray;
